[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Train.gd" type="Script" id=1]
[ext_resource path="res://textures/tilemap.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="Train" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="SpriteVertical" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 128, 128, 32, 32 )

[node name="SpriteHorizontal" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 96, 128, 32, 32 )

[node name="SpriteCorner" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 160, 128, 32, 32 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_velocity_computed"]
